--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="center">
-        <img src="res/favicon.png" alt="">
+        <img src="cohesion/favicon.png" alt="">
         <h3>Cohesion</h3>
         <p>1.0</p>
         Cohesion is a free and opensource markdown editor
