--- a/read.html
+++ b/read.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="style/palette.css" />
         <link rel="stylesheet" href="style/share.css" />
         <link rel="stylesheet" href="style/editor.css" />
-        <link rel="shortcut icon" href="res/favicon.png" type="image/x-icon" />
+        <link rel="shortcut icon" href="cohesion/favicon.png" type="image/x-icon" />
     </head>
 
     <body class="theme-dark">
