--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>New document</title>
-        <link rel="shortcut icon" href="res/favicon.png" type="image/x-icon" />
+        <link rel="shortcut icon" href="cohesion/favicon.png" type="image/x-icon" />
 
         <meta content="website" property="og:type" />
         <meta content="Flarom" name="author" />
@@ -15,7 +15,7 @@
         <meta content="Cohesion is a free and opensource online markdown text editor" property="og:description" />
 
         <meta content="Cohesion, markdown, text, editor, free, opensource" name="keywords" />
-        <meta content="https://flarom.github.io/cohesion/res/scrshot.png" property="og:image" />
+        <meta content="https://flarom.github.io/cohesion/cohesion/scrshot.png" property="og:image" />
         <meta content="https://flarom.github.io/cohesion" property="og:url" />
         <meta content="index, follow" name="robots" />
 
@@ -348,7 +348,7 @@ editor: Cohesion
 »»»
 
 <center>
-<img src=res/favicon.png>
+<img src=cohesion/favicon.png>
 
 # Wellcome to Cohesion
 </center>
