update date and time settings
+ fixed icons being miss-translated by the browser

--- a/about.html
+++ b/about.html
@@ -8,8 +8,8 @@
 <body>
     <div class="center">
         <img src="cohesion/favicon.png" alt="">
-        <h3>Cohesion</h3>
-        <p>1.0</p>
+        <h3 translate="no">Cohesion</h3>
+        <p translate="no">1.0</p>
         Cohesion is a free and opensource markdown editor
         <hr>
         <a href="https://github.com/flarom/cohesion" target="_blank">Repository</a> | 
