--- a/index.html
+++ b/index.html
@@ -126,20 +126,20 @@
             <header class="window-title off bottom" id="search-header">
                 <div class="header-center" style="display: flex; align-items: center; gap: 0px">
                     <div class="field-container">
-                        <label class="icon" for="search-field">search</label>
+                        <label class="icon" for="search-field" translate="no">search</label>
                         <input type="text" name="search-field" id="search-field" />
                     </div>
-                    <button id="search-prev-btn" class="icon-button button-group-member" title="Previous">keyboard_arrow_up</button>
-                    <button id="search-next-btn" class="icon-button button-group-member right" title="Next">keyboard_arrow_down</button>
-                    <button id="match-case-btn" class="icon-button button-group-member left" title="Match casing">match_case</button>
-                    <button id="regex-btn" class="icon-button button-group-member" title="Regular expression">regular_expression</button>
+                    <button id="search-prev-btn" class="icon-button button-group-member" title="Previous" translate="no">keyboard_arrow_up</button>
+                    <button id="search-next-btn" class="icon-button button-group-member right" title="Next" translate="no">keyboard_arrow_down</button>
+                    <button id="match-case-btn" class="icon-button button-group-member left" title="Match casing" translate="no">match_case</button>
+                    <button id="regex-btn" class="icon-button button-group-member" title="Regular expression" translate="no">regular_expression</button>
                     <button class="icon-button button-group-member right" translate="no" title="Replace" onclick="toggleReplaceHeader()" id="replace-btn">find_replace</button>
                 </div>
             </header>
             <header class="window-title off bottom" id="replace-header">
                 <div class="header-center" style="display: flex; align-items: center; gap: 0px">
                     <div class="field-container" style="border-radius: 5px; margin-right: 3.5px">
-                        <label class="icon" for="replace-field">find_replace</label>
+                        <label class="icon" for="replace-field" translate="no">find_replace</label>
                         <input type="text" name="replace-field" id="replace-field" />
                     </div>
                     <button id="replace-one-btn" class="text-button button-group-member left">Replace</button>
