--- a/resources.html
+++ b/resources.html
@@ -114,6 +114,7 @@
 
                     const div = document.createElement("div");
                     div.className = "fsfile";
+                    div.setAttribute('translate', 'no');
                     div.innerHTML = `
             <span class="icon">
                 <img src="${iconPath}" alt="icon" class="file-icon">
