--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                     <button id="replace-all-btn" class="text-button button-group-member right">Rep. all</button>
                 </div>
             </header>
-            <textarea id="editor"></textarea>
+            <textarea id="editor" class="editor"></textarea>
             <div id="preview" class="preview"></div>
             <div class="status-bar" id="status">
                 <div class="status-bar-left">
