--- a/settings.html
+++ b/settings.html
@@ -242,7 +242,7 @@
                             </div>
                         </div>
                     </div>
-                    <a href="https://www.foragoodstrftime.com/" target="_blank">Learn more about date and time syntax</a>
+                    <a href="https://github.com/flarom/cohesion/wiki/Time-Formatting" target="_blank">Learn more about date and time syntax</a>
                 </div>
             </div>
 
