updated settings links

--- a/settings.html
+++ b/settings.html
@@ -75,15 +75,15 @@
 <body>
     <div class="settings-body">
         <nav class="side-nav">
-            <a href="#theme">Theme</a>
-            <a href="#fonts">Fonts</a>
-            <a href="#editor">Editor</a>
-            <a href="#status_bar">Status Bar</a>
-            <a href="#data">My files</a>
+            <a href="#setting-theme">Theme</a>
+            <a href="#setting-fonts">Fonts</a>
+            <a href="#setting-editor">Editor</a>
+            <a href="#setting-status-bar">Status Bar</a>
+            <a href="#setting-data">My files</a>
         </nav>
         <div class="main-page">
             <div>
-                <h3 id="theme">Theme</h3>
+                <h3 id="setting-theme">Theme</h3>
                 <div class="setting" style="display: flex; gap: 10px; align-items: center; flex-wrap: wrap">
                     <button class="ball" style="background-color: #ffffff; color: #000000"
                         onclick="setSetting('theme', 'theme-epaper');loadSettings()">ePaper</button>
@@ -101,7 +101,7 @@
             </div>
 
             <div>
-                <h3 id="fonts">Fonts</h3>
+                <h3 id="setting-fonts">Fonts</h3>
                 <div class="setting">
                     <div>
                         <label>Editor font</label>
@@ -155,7 +155,7 @@
             </div>
 
             <div>
-                <h3 id="editor">Editor</h3>
+                <h3 id="setting-editor">Editor</h3>
                 <div class="setting" style="display: flex; flex-direction: column; gap: 5px">
                     <div class="switch-wrapper">
                         <label class="switch">
@@ -255,7 +255,7 @@
             </div>
 
             <div>
-                <h3 id="status_bar">Status bar</h3>
+                <h3 id="setting-status-bar">Status bar</h3>
                 <div class="setting" style="display: flex; flex-direction: column; gap: 5px">
                     <div class="switch-wrapper">
                         <label class="switch">
@@ -294,7 +294,7 @@
                 </div>
 
                 <div>
-                    <h3 id="data">My files</h3>
+                    <h3 id="setting-data">My files</h3>
                     <div>
                         <div class="setting box">
                             <div>
